# JEFRL

./: .gitattributes  .gitignore  README.md  demo.sh  massif.out.2050418  massif.out.2051281  pyproject.toml  test.js  transformer.py
ASTBERTa/: corpus.pkl  frag_to_id.pkl  frag_type_to_ids.pkl  id_to_token.pkl  token_to_id.pkl  vocab.pkl  vocab_data.pkl
corpus/configs/: DIE.json  default.json  demo.json
corpus/demo1/: test1.js
corpus/demo2/: test1.js
corpus/interesting/: 1682809467.8412673.js  1682809468.428241.js  1682809469.6477034.js  1684078827.4060845.js  1684078827.5824864.js  1684106698.8347368.js
corpus/libs/: chakracore.js  javascriptcore.js  spidermonkey.js  v8.js
corpus/v8/: accessor-map-sharing.pkl  accessors-no-prototype.ast  accessors-no-prototype.pkl  accessors-on-global-object.ast  accessors-on-global-object.pkl  allocation-folding.pkl  allocation-site-info.pkl  api-call-after-bypassed-exception.ast  api-call-after-bypassed-exception.pkl  apply-arguments-gc-safepoint.ast  apply-arguments-gc-safepoint.pkl  apply.pkl  argument-assigned.ast  argument-assigned.pkl  argument-named-arguments.ast  argument-named-arguments.pkl  arguments-apply-deopt.pkl  arguments-apply.ast  arguments-apply.pkl  arguments-call-apply.ast  arguments-call-apply.pkl  arguments-deopt.pkl  arguments-enum.ast  arguments-enum.pkl  arguments-escape.ast  arguments-escape.pkl  arguments-indirect.ast  arguments-indirect.pkl  arguments-iterator.pkl  arguments-lazy.ast  arguments-lazy.pkl  arguments-load-across-eval.ast  arguments-load-across-eval.pkl  arguments-read-and-assignment.ast  arguments-read-and-assignment.pkl  arguments.pkl  array-bounds-check-removal.pkl  array-buffer-detach-key.pkl  array-concat-arity.pkl  (+1864 more)
corpus/v8-2020/: testcfg.py
coverage_example/: Makefile  coverage.cc  example  example.c  test.py
engines/v8/: build.sh  (+1 more)
src/: baseline.py  finetuning.py  main.py  preprocessing.py  pretraining.py  stats.ipynb  transformer.ipynb  transformer.py  visualisation.py
(+82 files in other folders)
