[tool.poetry]
name = "js-rl"
version = "0.1.0"
description = ""
authors = ["Pranav Maganti <pranav.maganti@gmail.com>"]
readme = "README.md"
packages = [{include = "js_rl"}]

[tool.poetry.dependencies]
python = "^3.10"
esprima = "^4.0.1"
numpy = "^1.24.2"
tqdm = "^4.64.1"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1.0", allow-prereleases = true}
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]

